--- a/HealthDrops/res/layout/activity_bluetooth.xml
+++ b/HealthDrops/res/layout/activity_bluetooth.xml
@@ -9,15 +9,33 @@
     tools:context=".BluetoothActivity" >
 
     <TextView
-        android:id="@+id/label"
+        android:id="@+id/infoView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="38dp"
+        android:text="Última medição:"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <TextView 
+    <TextView
         android:id="@+id/statusLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_below="@+id/infoView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:text="Large Text"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <Button
+        android:id="@+id/BluetoothButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/statusLabel"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="17dp"
+        android:onClick="onClick"
+        android:text="Ler histórico" />
         
 </RelativeLayout>
