--- a/HealthDrops/res/layout/activity_set_alarm.xml
+++ b/HealthDrops/res/layout/activity_set_alarm.xml
@@ -3,13 +3,13 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
     
-	<RelativeLayout 
+	<LinearLayout 
 	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
 	    android:paddingBottom="@dimen/activity_vertical_margin"
 	    android:paddingLeft="@dimen/activity_horizontal_margin"
 	    android:paddingRight="@dimen/activity_horizontal_margin"
-	    android:paddingTop="@dimen/activity_vertical_margin">
+	    android:paddingTop="@dimen/activity_vertical_margin"
+	    android:orientation="vertical" >
 	
 	    <TextView
 	        android:id="@+id/title_alarm_textview"
@@ -24,15 +24,14 @@
 	        android:id="@+id/medicine_name_alarm_textview"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_below="@+id/title_alarm_textview"
-	        android:text="@string/medicine_name_alarm_text_string"
-	        android:textAppearance="?android:attr/textAppearanceMedium" />
+	        android:layout_below="@+id/medicine_name_alarm_textview"
+	        android:text="@string/medicine_name_alarm_text_string"/>
 	
 	    <EditText
 	        android:id="@+id/medicine_name_alarm_edittext"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_below="@+id/medicine_name_alarm_textview"
+	        android:layout_below="@+id/title_alarm_textview"
 	        android:ems="10" />
 	
 	    <TextView
@@ -117,5 +116,5 @@
 	        android:onClick="salvarAlarmeButton" />
 	
 	        <requestFocus />
-	</RelativeLayout>
+	</LinearLayout>
 </ScrollView>
